--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="saved">Account</string>
     <string name="register">Register</string>
     <string name="login">Login</string>
+    <string name="price">Price</string>
 </resources>
