detail and google map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="saved">Account</string>
     <string name="register">Register</string>
     <string name="login">Login</string>
+    <string name="title_activity_maps">Map</string>
     <string name="price">Price</string>
     <string name="first_slide_title">Tìm Phòng Trọ</string>
     <string name="second_slide_title">Maps</string>
