--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="address">"Địa chỉ: "</string>
     <string name="save_post">Bài đã lưu</string>
     <string name="name_home">Tên trọ</string>
-    <string name="comment_text">Đánh giá</string>
+    <string name="comment_text">Xét đánh giá của bạn</string>
     <string name="hint_add_comment">Add comment</string>
     <string name="add_comment">Đánh giá</string>
     <string name="btn_delete">Xóa</string>
