--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="hint_add_comment">Add comment</string>
     <string name="add_comment">Đánh giá</string>
     <string name="btn_delete">Xóa</string>
+    <string name="btn_update">Cập Nhật</string>
 </resources>
